force-app/main/default/objects/BMCServiceDesk__BMC_Software__c/BMCServiceDesk__BMC_Software__c.object-meta.xml
<CustomObject>
    <description>BMC_Software: CMDB Abstract class that defines software elements for a particular platform.   By definition, abstract classes cannot hold any instances. You use them only in special cases to organize subclasses so that you have the flexibility to add a layer of organization without a database join. Therefore, you might use subclasses (such as BMC_Patch, BMC_Product, and BMC_SystemSoftware) to represent particular types of software elements in your IT environment.  This class corresponds to the DMTF class CIM_SoftwareElement.</description>
    <label>Software</label>
    <nameField>
        <label>BMC_Software Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Software</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>