force-app/main/default/objects/BMCServiceDesk__BMC_Software__c/fields/BMCServiceDesk__BuildType__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__BuildType__c</fullName>
    <label>Build Type</label>
    <length>254</length>
    <type>Text</type>
</CustomField>