force-app/main/default/objects/BMCServiceDesk__BMC_Software__c/fields/BMCServiceDesk__ContractID__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__ContractID__c</fullName>
    <label>Contract ID</label>
    <length>254</length>
    <type>Text</type>
</CustomField>