force-app/main/default/objects/BMCServiceDesk__BMC_Software__c/fields/BMCServiceDesk__InstallLocation__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__InstallLocation__c</fullName>
    <label>Install Location</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>