force-app/main/default/objects/BMCServiceDesk__BMC_Software__c/fields/BMCServiceDesk__LicensesAvailable__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__LicensesAvailable__c</fullName>
    <label>Licenses Available</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>