force-app/main/default/objects/BMCServiceDesk__BMC_Software__c/fields/BMCServiceDesk__LicenseType__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__LicenseType__c</fullName>
    <label>License Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Group</fullName>
            </value>
            <value>
                <fullName>Site</fullName>
            </value>
            <value>
                <fullName>Global</fullName>
            </value>
            <value>
                <fullName>Server</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>